force-app/main/default/objects/Land_Parcel__c/Land_Parcel__c.object-meta.xml
<CustomObject>
    <label>Land Parcel</label>
    <description>Tracks surface and mineral land parcels including ownership, acreage, legal descriptions, and lease assignments.</description>
    <nameField>
        <label>Parcel Number</label>
        <type>AutoNumber</type>
        <displayFormat>{0000}</displayFormat>
    </nameField>
    <pluralLabel>Land Parcels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>