force-app/main/default/objects/Land_Parcel__c/fields/Acreage__c.field-meta.xml
<CustomField>
    <fullName>Acreage__c</fullName>
    <label>Acreage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>