force-app/main/default/objects/Land_Parcel__c/fields/Coordinates__c.field-meta.xml
<CustomField>
    <fullName>Coordinates__c</fullName>
    <label>Coordinates</label>
    <type>Text</type>
    <length>255</length>
</CustomField>