force-app/main/default/objects/Land_Parcel__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <label>County</label>
    <type>Text</type>
    <length>255</length>
</CustomField>