force-app/main/default/objects/Land_Parcel__c/fields/Legal_Description__c.field-meta.xml
<CustomField>
    <fullName>Legal_Description__c</fullName>
    <label>Legal Description</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>