force-app/main/default/objects/Land_Parcel__c/fields/Mineral_Rights_Owner__c.field-meta.xml
<CustomField>
    <fullName>Mineral_Rights_Owner__c</fullName>
    <label>Mineral Rights Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mineral Rights Land Parcels</relationshipLabel>
    <relationshipName>Mineral_Rights_Land_Parcels</relationshipName>
    <type>Lookup</type>
</CustomField>