force-app/main/default/objects/Land_Parcel__c/fields/Surface_Rights_Owner__c.field-meta.xml
<CustomField>
    <fullName>Surface_Rights_Owner__c</fullName>
    <label>Surface Rights Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Surface Rights Land Parcels</relationshipLabel>
    <relationshipName>Surface_Rights_Land_Parcels</relationshipName>
    <type>Lookup</type>
</CustomField>